# cynthium

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  bp.sh  pyproject.toml  requirements.txt  setup.py
data/: DM1_5mpp_surf.tif  DM1_final_adj_5mpp_slp.tif  DM2_5mpp_surf.tif  Haworth_5mpp_surf.tif  Haworth_final_adj_5mpp_slp.tif  LM2_5mpp_surf.tif  LM2_final_adj_5mpp_slp.tif  LM3_5mpp_surf.tif  LM4_final_adj_5mpp_slp.tif  LM5_5mpp_surf.tif  LM7_final_adj_5mpp_slp.tif  LM8_5mpp_surf.tif  LM8_final_adj_5mpp_slp.tif  NPA_final_adj_5mpp_slp.tif  NPB_5mpp_surf.tif  NPB_final_adj_5mpp_slp.tif  NPC_final_adj_5mpp_slp.tif  NPD_5mpp_surf.tif  SL2_final_adj_5mpp_slp.tif  SL3_final_adj_5mpp_slp.tif  Site01_5mpp_surf.tif  Site04_final_adj_5mpp_slp.tif  Site06_5mpp_surf.tif  Site07_final_adj_5mpp_slp.tif  Site20_final_adj_5mpp_slp.tif  Site20v2_5mpp_surf.tif  Site42_5mpp_surf.tif  Summer_Illumination_mask_80mpp_SPole_GEO.tif  Winter_Illumination_mask_80mpp_SPole_GEO.tif  bruh.sh  down.sh  files.txt  hash.sh  illum_angle_108.tif  illum_angle_240.tif  illum_angle_252.tif  illum_angle_264.tif  illum_angle_300.tif  illum_angle_312.tif  illum_angle_36.tif  (+16 more)
data/elevation/: DM1_final_adj_5mpp_surf.tif.aux.xml  DM2_final_adj_5mpp_surf.tif.aux.xml  Haworth_5mpp_surf.tif.aux.xml  LM1_5mpp_surf.tif  LM1_final_adj_5mpp_surf.tif.aux.xml  LM2_final_adj_5mpp_surf.tif.aux.xml  LM3_5mpp_surf.tif.aux.xml  LM4_5mpp_surf.tif  LM4_5mpp_surf.tif.aux.xml  LM5_5mpp_surf.tif.aux.xml  LM6_5mpp_surf.tif  LM6_5mpp_surf.tif.aux.xml  LM7_5mpp_surf.tif  LM7_5mpp_surf.tif.aux.xml  LM8_final_adj_5mpp_surf.tif.aux.xml  NPA_5mpp_surf.tif  NPA_final_adj_5mpp_surf.tif.aux.xml  NPB_final_adj_5mpp_surf.tif.aux.xml  NPC_5mpp_surf.tif  NPC_final_adj_5mpp_surf.tif.aux.xml  NPD_final_adj_5mpp_surf.tif.aux.xml  SL2_5mpp_surf.tif  SL2_final_adj_5mpp_surf.tif.aux.xml  Shoemaker_final_adj_5mpp_surf.tif.aux.xml  Site01_final_adj_5mpp_surf.tif.aux.xml  Site04_5mpp_surf.tif  Site04_5mpp_surf.tif.aux.xml  Site06_5mpp_surf.tif.aux.xml  Site07_5mpp_surf.tif  Site07_final_adj_5mpp_surf.tif.aux.xml  Site11_5mpp_surf.tif  Site11_5mpp_surf.tif.aux.xml  Site20_5mpp_surf.tif  Site20_5mpp_surf.tif.aux.xml  Site20v2_final_adj_5mpp_surf.tif.aux.xml  Site23_5mpp_surf.tif  Site23_final_adj_5mpp_surf.tif.aux.xml  Site42_final_adj_5mpp_surf.tif.aux.xml
data/illum/: Illumination_mask_5mpp_Site_01_GEO.tif  Illumination_mask_5mpp_Site_04_GEO.tif  Illumination_mask_5mpp_Site_06_GEO.tif  Illumination_mask_5mpp_Site_07_GEO.tif  Illumination_mask_5mpp_Site_11_GEO.tif  Illumination_mask_5mpp_Site_20_GEO.tif  Illumination_mask_5mpp_Site_23_GEO.tif  Illumination_mask_5mpp_Site_LM1_GEO.tif  (+10 more)
docs/: algorithms.rst  conf.py  index.rst  installation.rst  overview.rst  usage.rst
docs/api/: engine.rst  index.rst  (+5 more)
tests/: test_stats.py
(+117 files in other folders)
